[gd_scene load_steps=3 format=3 uid="uid://cuacls433armr"]

[ext_resource type="Script" path="res://Menus/MainMenu/menu.gd" id="1_1mu1r"]
[ext_resource type="Texture2D" uid="uid://o4q5hdx5e7c0" path="res://Images/Try Hit Me_label.png" id="2_iji1u"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1mu1r")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1153.0
offset_bottom = 647.0
color = Color(0, 0, 0, 0.360784)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.65
anchor_right = 0.5
anchor_bottom = 0.65
offset_left = -87.0
offset_top = -50.2
offset_right = 82.0
offset_bottom = 50.8
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
text = "Start"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../StartButton")
text = "Quit"

[node name="TryHitMeLabel" type="Sprite2D" parent="."]
position = Vector2(579, 249)
scale = Vector2(1.43038, 1.43038)
texture = ExtResource("2_iji1u")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_top = 613.0
offset_right = 195.0
offset_bottom = 646.0
text = "DEV_TEST"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
